<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/textSelectDateExpect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_make_simple_registration_start_quote"
                android:layout_marginTop="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />

        <android.support.constraint.Guideline
                android:id="@+id/guideline_0.30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.20"
        />

        <android.support.design.widget.TextInputLayout
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:layout_marginBottom="15dp"
                app:layout_constraintTop_toTopOf="@id/guideline_0.30"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <EditText
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/etCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cpf"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintTop_toBottomOf="@id/etName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <EditText
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/etRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rg"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintTop_toBottomOf="@id/etCPF"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <EditText
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/etDateBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date_birth"
                app:layout_constraintTop_toBottomOf="@id/etRG"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

            <EditText
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/etNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nationality"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintTop_toBottomOf="@id/etDateBirth"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <EditText
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/etUF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_federative_unit"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintTop_toBottomOf="@id/etNationality"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <EditText
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintTop_toBottomOf="@id/etUF"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <EditText
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.TextInputLayout>
        <Button
                android:id="@+id/bRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/button_register"
                app:layout_constraintTop_toBottomOf="@id/etAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

        />

    </android.support.constraint.ConstraintLayout>
</ScrollView>