<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/textNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_purchase_order_registration"
            android:textSize="25sp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <android.support.constraint.Guideline
            android:id="@+id/guideline_0.30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"
    />

    <TextView
            android:id="@+id/textSelectDesiredCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_select_desired_coin"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_0.30"
    />

    <Spinner
            android:id="@+id/coin_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSelectDesiredCoin"
    />

    <TextView
            android:id="@+id/textSelectDateExpect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_select_until_which_date_expect"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coin_spinner"
    />

    <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:inputType="date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSelectDateExpect"
    >
    </EditText>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilValueCoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/hit_tell_what_is_ideal_amount_to_purchase"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"
    >

        <EditText
                android:id="@+id/edCoin"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilQtyCoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hit_enter_quantity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilValueCoin"
            app:layout_constraintHorizontal_bias="0.0">


        <EditText
                android:id="@+id/edQtyCoin"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnRegisterOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/button_register_order"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@id/tilQtyCoin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

</android.support.constraint.ConstraintLayout>